add some test changes

--- a/client/public/.htaccess
+++ b/client/public/.htaccess
@@ -1,5 +1,5 @@
 # =========================================
-# Innovative Minds - Apache Configuration
+# Innovative Mindss - Apache Configuration
 # Technical SEO & Performance Optimization
 # =========================================
 
